# rle-pkg

./: README.md
mcp/sample-task/: task.toml
mcp/sample-task/environment/: .dockerignore  Dockerfile
mcp/sample-task/environment/data/: secret.txt
mcp/sample-task/environment/mcp-server/: server.py
mcp/sample-task/environment/verifier/: pyproject.toml
mcp/sample-task/environment/verifier/verifier/: config.py
mcp/sample-task/tests/: test.sh
no-mcp/sample-task/: instruction.md
no-mcp/sample-task/environment/: Dockerfile  mcp-server-run.c
no-mcp/sample-task/solution/: solve.sh
no-mcp/sample-task/tests/: test.sh
sample-task/: instruction.md  task.toml
sample-task/environment/: Dockerfile
sample-task/environment/mcp-server/: pyproject.toml  server.py
sample-task/environment/verifier/verifier/: judge.py  main.py  trajectory.py
sample-task/tests/: grader.toml  rubric.json  verifier.toml
skill/hello-skills/: task.toml
skill/hello-skills/environment/: Dockerfile
skill/hello-skills/tests/: test.sh
